# nami

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
crates/nami-carbon-eia/: Cargo.toml
crates/nami-carbon-eia/src/: api.rs  cache.rs  derive.rs  egrid.rs  error.rs  forecast.rs  lib.rs  refresh.rs
crates/nami-carbon-eia/tests/: egrid_table.rs  fuel_type_parsing.rs  live_eia.rs
crates/nami-carbon-eia/tests/fixtures/: README.md  eia-fuel-type-sample.json
crates/nami-carbon-static/: Cargo.toml
crates/nami-carbon-static/src/: error.rs  lib.rs  provider.rs  table.rs
crates/nami-carbon-watttime/: Cargo.toml
crates/nami-carbon-watttime/src/: error.rs  lib.rs
crates/nami-cli/: Cargo.toml
crates/nami-cli/src/: completions.rs  deadline.rs  doctor.rs  explain.rs  forecast.rs  init.rs  main.rs  preview.rs  profile.rs  report.rs  reports.rs  run.rs  sink.rs  status.rs
crates/nami-core/: Cargo.toml
crates/nami-core/src/: carbon.rs  confidence.rs  decision.rs  duration_secs.rs  error.rs  job.rs  lib.rs  observation.rs  provider.rs  region.rs  report.rs  scheduler.rs  sink.rs
crates/nami-region/: Cargo.toml
crates/nami-region/src/: error.rs  lib.rs
crates/nami-scheduler/: Cargo.toml
crates/nami-scheduler/src/: best_window.rs  error.rs  fallback.rs  lib.rs  materiality.rs  window.rs
data/: egrid-factors.toml
docs/: confidence-and-materiality.md  eia-api-notes.md  methodology.md  product-roadmap.md  project-brief.md  public-data-sources.md  use-cases.md
examples/: demo.sh  sklearn_train.py
examples/integrations/: README.md  github-action.yml
examples/integrations/cron/: crontab.example  nami-nightly.sh
examples/integrations/systemd/: nami-nightly.service  nami-nightly.timer  nami-refresh.service  nami-refresh.timer
