[package]
name = "nami-carbon-static"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Offline static-fallback provider for nami; flat annual regional means only."

[dependencies]
nami-core = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
time = { workspace = true }
