[package]
name = "nami-region"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Deterministic region resolution (flag / env / config) for nami."

[dependencies]
nami-core = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
